[gd_scene load_steps=7 format=3 uid="uid://b5xgdttaspmk"]

[ext_resource type="Script" uid="uid://mqgbv8ffy2j7" path="res://lessons_reference/video_16/mob/mob1.gd" id="1_bgxp1"]
[ext_resource type="PackedScene" uid="uid://dofv2yewrcbeq" path="res://lessons_reference/video_16/mob/skeleton/skeleton_mage.tscn" id="3_bgxp1"]
[ext_resource type="AudioStream" uid="uid://bec5opkuf77c7" path="res://mob/mob_take_damage.wav" id="3_vcc1q"]
[ext_resource type="AudioStream" uid="uid://ha0bp3cygkq1" path="res://mob/mob_ko.wav" id="4_ub8vd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_bgxp1"]
size = Vector3(0.5, 1, 0.5)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bgxp1"]
height = 2.09961

[node name="Mob" type="RigidBody3D"]
top_level = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
gravity_scale = 0.0
script = ExtResource("1_bgxp1")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_bgxp1")

[node name="Skeleton_Mage" parent="." instance=ExtResource("3_bgxp1")]
unique_name_in_owner = true
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07365, 0)
visible = false
shape = SubResource("CapsuleShape3D_bgxp1")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="HurtSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_vcc1q")
max_db = -10.0
max_polyphony = 4

[node name="KOSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_ub8vd")
max_db = -10.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
